--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sivalabs</groupId>
-    <artifactId>springmvc-datajpa-security-demo</artifactId>
-    <version>1.0</version>
+    <artifactId>cmb</artifactId>
+    <version>1.9</version>
     <packaging>war</packaging>
 
 
@@ -24,7 +24,7 @@
     </properties>
 
     <build>
-        <finalName>cmb</finalName>
+        <finalName>cmb-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
