Instore search and all bills as PDF download.

--- a/src/main/resources/views.properties
+++ b/src/main/resources/views.properties
@@ -1,2 +1,3 @@
 pdfView.(class)=com.sivalabs.springapp.web.PdfView
 xlsView.(class)=com.sivalabs.springapp.web.ExcelView
+billsPdfView.(class)=com.sivalabs.springapp.web.BillsPdfView
