Makde some ui changes and changed logic to get paid to upaid bill amounts.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 ################### DataSource Configuration ##########################
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/nandana
-jdbc.username=nandana
+jdbc.url=jdbc:mysql://127.0.0.1:3306/nandana
+jdbc.username=root
 jdbc.password=samba123
 
 init-db=false
