Inactive customers are now marked red. Bills list will can now be exported to excel.

--- a/src/main/resources/views.properties
+++ b/src/main/resources/views.properties
@@ -1,3 +1,4 @@
 pdfView.(class)=com.sivalabs.springapp.web.PdfView
 xlsView.(class)=com.sivalabs.springapp.web.ExcelView
 billsPdfView.(class)=com.sivalabs.springapp.web.BillsPdfView
+billsXlsView.(class)=com.sivalabs.springapp.web.BillsXlsView
