Added new code to have much better printing of the logo while generating the bill.

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                 <configuration>
                     <scanIntervalSeconds>300</scanIntervalSeconds>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>/cmb</contextPath>
                     </webApp>
                     <systemProperties>
                         <systemProperty>
