--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/nandana
-jdbc.username=root
+jdbc.username=nandana
 jdbc.password=samba123
 
 init-db=false
